--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -50,28 +50,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1:** "
+    "**Q1:** In our model performance is more important to us. Accuracy represnts how much we are \"correct\".\n",
+    "        it's calculated by (TP+TN)/(TP+TN+FP+FN).\n",
+    "        But, some times if our data is imbalanced (almost every one is \"sick\") and our naive model says everyone is sick we will have high \n",
+    "        accuracy. which means accuracy is not a good way to asses our model.\n",
+    "        therefore, we should use other methods to asses our model. \n",
+    "        A good way to asses our model is using F1 which is:\n",
+    "        (2*percision*recall)/ (Percision+Sensitivity).\n",
+    "        Percision = TP/ (TP+FP) -> total predicted positive\n",
+    "        Sensitivity= TP/TP+FN -> Corecctly predicted positive.\n",
+    "        With F1 you can weight your model better, it has the highest score if FP and FN have simillar values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q2:** "
+    "**Q2:** The first model uses fewer features which means it can have higher correlation between the features and the labels. But! it may cause\n",
+    "        over-fitting because our dataset is now narrowed to only 2 features. That being said BP and BMI are a good features which can predict \n",
+    "         heart attack quite well, too much data may cause under-fitting.\n",
+    "        The second mode. has much more features which might be good, but it can cause under-fitting our model will not \"learn\" cause we have\n",
+    "        confusing data which will make it unable to classify or worngly classfiying. In general more data/features is good and better and it\n",
+    "        can save us from being over-fitting and being more general in our learning."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q3:** "
+    "**Q3:** In general, nonlinear SVM "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q4:** "
+    "**Q4:** LR is a classifer that tries to get the maximum likelihood of label to occour. by doing so using probability we get a \"smooth\"\n",
+    "        likelihood of prediction to occour using statistical models. LR is influneced by its hyper-parameter (lambda) which is the weight for\n",
+    "        penalty for incorrect classifying. setting high value for lambda may cause over-fitting, setting a really low lambda value may cause\n",
+    "        under-fitting. using lambda LR is less influneced by outliners which is a one of the \"weakness\" in LR.\n",
+    "        linear SVM is a classifier which is trying to maxmimize the margin between two support vectors. SVM in more general in its method.\n",
+    "        SVM contains two hyper paramters, (Capacity/C and gama). C is the penalty weight we want for false classifing.\n",
+    "        gama is how much we want our data\n",
+    "        to fit. high gama values may cause over-fitting. "
    ]
   },
   {
